--- a/keyboards/mitosis/CMakeLists.txt
+++ b/keyboards/mitosis/CMakeLists.txt
@@ -1,7 +1,20 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(mitosis C)
 
+message("Project ${CMAKE_PROJECT_NAME} ROOT ${CMAKE_CURRENT_SOURCE_DIR}")
+message("Current Binary Dir        ${CMAKE_CURRENT_BINARY_DIR}")
+
+set(__AVR__ AVR CACHE STRING "AVR value") # Configurable by user
+set(ARCH AVR8 CACHE STRING "target architecture")
+configure_file(keymaps/ubergrok/auto_config.h.in keymaps/ubergrok/auto_config.h)
+
 find_library(qmk_LUFA qmk_LUFA lib/lufa)
+include_directories(
+        ${CMAKE_CURRENT_BINARY_DIR}
+        ${CMAKE_CURRENT_BINARY_DIR}/keymaps/ubergrok/
+        )
+
+add_definitions(-DARCH=AVR8)
 
 add_executable(mitosis_ubergrok.out
         config.h
